--- a/myhouselifting.in/index.html
+++ b/myhouselifting.in/index.html
@@ -216,7 +216,7 @@
                                 <img class="img-fluid w-100 h-100 bg-light p-lg-3 mb-4 mb-md-0" src="img/logoman.jpg" alt="">
                             </div>
                             <div class="col-xl-8 col-lg-7 col-md-7">
-                                <h4 class="text-uppercase mb-0">Mr Rajkumar</h4>
+                                <h4 class="text-uppercase mb-0"></h4>
                                 <p>Manager</p>
                                 <p class="fs-5 mb-0"><i class="fa fa-2x fa-quote-left text-primary me-2"></i> We promise to provide our clients with 100% satisfaction in the work that we do.
                                     Our team of skilled professionals are dedicated to ensuring that all projects are completed to the highest standards of quality and safety.
@@ -228,7 +228,7 @@
                                 <img class="img-fluid w-100 h-100 bg-light p-lg-3 mb-4 mb-md-0" src="img/logoman.jpg" alt="">
                             </div>
                             <div class="col-xl-8 col-lg-7 col-md-7">
-                                <h4 class="text-uppercase mb-0">Mr Rajkumar </h4>
+                                <h4 class="text-uppercase mb-0">Mr Subhash Rana </h4>
                                 <p>Manager</p>
                                 <p class="fs-5 mb-0"><i class="fa fa-2x fa-quote-left text-primary me-2"></i>We use the latest technology and techniques to ensure that our work is efficient, reliable and of the highest quality.This allows us to deliver projects on time and within budget, while also ensuring that the work meets or exceeds industry standards and regulations </p>
                             </div>
