--- a/myhouselifting.in/index.html
+++ b/myhouselifting.in/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>WEBUILD -  Construction Company Website Template Free</title>
+    <title>HOUSELIFTING -  Construction Company Website Template Free</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -85,7 +85,7 @@
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                         <div class="dropdown-menu m-0">
-                            <a href="project.html" class="dropdown-item">Our Project</a>
+                            <a href="project.html" class="dropdown-item">Gallery</a>
                             <a href="team.html" class="dropdown-item">The Team</a>
                             <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                             <a href="blog.html" class="dropdown-item">Blog Grid</a>
@@ -346,12 +346,12 @@
         <div class="text-center mx-auto mb-5" style="max-width: 600px;">
             <h1 class="display-5 text-uppercase mb-4">Some Of Our <span class="text-primary">Popular</span> Dream Projects</h1>
         </div>
-        <div class="row gx-5">
+        <!-- <div class="row gx-5">
             <div class="col-12 text-center">
                 <div class="d-inline-block bg-dark-radial text-center pt-4 px-5 mb-5">
                     <ul class="list-inline mb-0" id="portfolio-flters">
                         <li class="btn btn-outline-primary bg-white p-2 active mx-2 mb-4" data-filter="*">
-                            <img src="img/portfolio-1.jpg" style="width: 150px; height: 100px;">
+                            <img src="img/banglore.jpg" style="width: 150px; height: 100px;">
                             <div class="position-absolute top-0 start-0 end-0 bottom-0 m-2 d-flex align-items-center justify-content-center" style="background: rgba(4, 15, 40, .3);">
                                 <h6 class="text-white text-uppercase m-0">All</h6>
                             </div>
@@ -371,7 +371,7 @@
                     </ul>
                 </div>
             </div>
-        </div>
+        </div> -->
         <div class="row g-5 portfolio-container">
             <div class="col-xl-4 col-lg-6 col-md-6 portfolio-item first">
                 <div class="position-relative portfolio-box">
@@ -629,7 +629,7 @@
                     <div class="mb-4">
                         <h1 class="display-5 text-uppercase mb-4">Request A <span class="text-primary">Call Back</span></h1>
                     </div>
-                    <p class="mb-5">Our service is available 24 hours a day, 7 days a week. We understand that construction projects and emergencies can happen at any time and that is why we are committed to providing our customers with the support they need, when they need it. Our team of experienced professionals is always on standby, ready to respond to any requests for service or assistance. Whether you need help with an urgent repair, a last-minute design change, or a routine maintenance task, we are here to help. Our 247 availability ensures that you can count on us to be there for you whenever you need us, so you can have peace of mind knowing that your project is in good hands. Contact us today to learn more about our 24 hours availability and how we can help you with your construction needs.</p>
+                    <p class="mb-5">Our service is available 24 hours a day, 7 days a week. We understand that construction projects and emergencies can happen at any time and that is why we are committed to providing our customers with the support they need, when they need it. Our team of experienced professionals is always on standby, ready to respond to any requests for service or assistance. Whether you need help with an urgent repair, a last-minute design change, or a routine maintenance task, we are here to help. Our 24x7 availability ensures that you can count on us to be there for you whenever you need us, so you can have peace of mind knowing that your project is in good hands. Contact us today to learn more about our 24 hours availability and how we can help you with your construction needs.</p>
                     <a class="btn btn-primary py-3 px-5" href="">Get A Quote</a>
                 </div>
                 <!-- <div class="col-lg-8">
