--- a/myhouselifting.in/team.html
+++ b/myhouselifting.in/team.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>WEBUILD -  Construction Company Website Template Free</title>
+    <title>HOUSELIFTING -  Construction Company Website Template Free</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -71,7 +71,7 @@
     <div class="container-fluid sticky-top bg-dark bg-light-radial shadow-sm px-5 pe-lg-0">
         <nav class="navbar navbar-expand-lg bg-dark bg-light-radial navbar-dark py-3 py-lg-0">
             <a href="index.html" class="navbar-brand">
-                <h1 class="m-0 display-4 text-uppercase text-white"><i class="bi bi-building text-primary me-2"></i>WEBUILD</h1>
+                <h1 class="m-0 display-4 text-uppercase text-white"><i class="bi bi-building text-primary me-2"></i>HOUSELIFTING</h1>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
@@ -110,6 +110,38 @@
         </div>
     </div>
     <!-- Page Header Start -->
+
+
+
+
+    <header>
+        <h1>Heman Building Lifting Gallery</h1>
+    </header>
+    <div class="gallery-container">
+        <div class="gallery">
+            <div class="gallery-item">
+                <img src="image1.jpg" alt="Building Lifting 1">
+            </div>
+            <div class="gallery-item">
+                <img src="image2.jpg" alt="Building Lifting 2">
+            </div>
+            <div class="gallery-item">
+                <img src="image3.jpg" alt="Building Lifting 3">
+            </div>
+            <div class="gallery-item">
+                <img src="image4.jpg" alt="Building Lifting 4">
+            </div>
+            <div class="gallery-item">
+                <img src="image5.jpg" alt="Building Lifting 5">
+            </div>
+            <div class="gallery-item">
+                <img src="image6.jpg" alt="Building Lifting 6">
+            </div>
+        </div>
+    </div>
+
+
+    
 
 
     <!-- Team Start -->
@@ -320,7 +352,7 @@
         <div class="row g-5">
             <div class="col-lg-6 pe-lg-5">
                 <a href="index.html" class="navbar-brand">
-                    <h1 class="m-0 display-4 text-uppercase text-white"><i class="bi bi-building text-primary me-2"></i>WEBUILD</h1>
+                    <h1 class="m-0 display-4 text-uppercase text-white"><i class="bi bi-building text-primary me-2"></i>HOUSELIFTING</h1>
                 </a>
                 <p>Aliquyam sed elitr elitr erat sed diam ipsum eirmod eos lorem nonumy. Tempor sea ipsum diam  sed clita dolore eos dolores magna erat dolore sed stet justo et dolor.</p>
                 <p><i class="fa fa-map-marker-alt me-2"></i>Location, City, Country</p>
